fix spacing

--- a/index.css
+++ b/index.css
@@ -67,5 +67,6 @@ pre > code {
   pre { 
     overflow-x: visible;
     overflow-y: visible;
+    width: 100%;
   }
 }
